Version 2 including OpenSSL