@@ -11,15 +11,12 @@
     <packaging>jar</packaging>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>21</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jmh.version>1.37</jmh.version>
-        <maven.compiler.version>3.12.1</maven.compiler.version>
-        <maven.shade.version>3.5.1</maven.shade.version>
-        <maven.exec.version>3.1.1</maven.exec.version>
-        <exec.mainClass>benchmark.encdec.file.CipherBenchmark</exec.mainClass>
-        <benchmarks.jar>${project.artifactId}-${project.version}-benchmarks.jar</benchmarks.jar>
+        <maven.compiler.version>3.14.0</maven.compiler.version>
+        <maven.shade.version>3.6.0</maven.shade.version>
+        <benchmarks.jar>${project.artifactId}-${project.version}-runnable</benchmarks.jar>
     </properties>
 
     <dependencies>
@@ -34,11 +31,6 @@
             <version>${jmh.version}</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>io.consensys.tuweni</groupId>
-            <artifactId>tuweni-crypto</artifactId>
-            <version>2.7.0</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -47,10 +39,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.version}</version>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                </configuration>
+               <configuration>
+                <compilerArgs>
+                    <!--<arg>-proc:full</arg>-->
+                    <arg>--enable-preview</arg>
+                </compilerArgs>
+               </configuration>
             </plugin>
             
             <plugin>
@@ -67,7 +61,7 @@
                             <finalName>${benchmarks.jar}</finalName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.openjdk.jmh.Main</mainClass>
+                                    <mainClass>benchmark.Main</mainClass>
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
@@ -81,31 +75,6 @@
                                     </excludes>
                                 </filter>
                             </filters>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>${maven.exec.version}</version>
-                <executions>
-                    <execution>
-                        <id>run-benchmarks</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <classpathScope>test</classpathScope>
-                            <executable>java</executable>
-                            <arguments>
-                                <argument>-classpath</argument>
-                                <classpath/>
-                                <argument>org.openjdk.jmh.Main</argument>
-                                <argument>.*</argument>
-                            </arguments>
                         </configuration>
                     </execution>
                 </executions>
